# g-vs

./: .gitignore  LICENSE  install_oatpp.sh  videoserver.config.default
html/: index.html
real/: CMakeLists.txt  main  main copy.cpp  main.cpp  test.cpp
real/include/: authrouter.hpp  misc.hpp  pipeline.hpp  types.hpp  usersrouter.hpp  videoserver.hpp  vsapirouter.hpp  vsrouter.hpp
real/include/api/component/: app.hpp  database.hpp  service.hpp
real/include/api/controller/: auth.hpp  authcontroller.cpp  authcontroller.hpp  users.hpp  vsapi.hpp  vsapicontroller.hpp
real/include/api/controller/src/: auth.cpp  users.cpp  vsapi.cpp  vsapi_api.cpp  vsapi_utils.cpp  vsapi_video.cpp
real/include/api/database/: authdb.hpp  usersdb.hpp  vsapidb.hpp
real/include/api/db/client/: auth.hpp  users.hpp  vsapi.hpp
real/include/api/db/dto/: auth.hpp  media.hpp  source.hpp  user.hpp
real/include/api/db/service/: auth.hpp  users.hpp  vsapi.hpp
real/include/api/db/service/src/: auth.cpp  users.cpp  vsapi.cpp
real/include/api/dto/: config.hpp  source.hpp  sourceconfig.hpp  status.hpp
real/include/api/handler/: auth.hpp  error.cpp  error.hpp
real/include/api/handler/src/: auth.cpp  error.cpp
real/include/api/hls/: hls.cpp  hls.hpp
real/include/api/interceptor/: request.cpp  request.hpp
real/include/api/multipart/: mpstreamer.cpp  mpstreamer.hpp  multipart.cpp  multipart.hpp
real/include/api/token/: jwt.cpp  jwt.hpp
real/include/brick/: brick.cpp
real/include/bus/: bus.cpp
real/include/cpp/: auth.cpp  brick.cpp  bus.cpp  pipeline.cpp  users.cpp  videoserver.cpp  vsapi.cpp
real/include/media/: media.cpp  media.hpp
real/include/pipeline/: pipeline.cpp  pipeline.hpp
real/include/source/: source.cpp  source.hpp
real/include/utils/: filemanager.cpp  filemanager.hpp  hlsconfig.hpp
real/include/video/brick/: brick.cpp  brick.hpp
real/include/video/bus/: bus.cpp  bus.hpp
real/include/video/live/: live.cpp  live.hpp
real/include/video/media/: media.cpp  media.hpp
real/include/video/pipeline/: pipeline.cpp  pipeline.hpp
real/include/video/sample/: sample.cpp  sample.hpp
real/include/video/source/: pipebranch.hpp  pipetree.hpp  source.cpp  source.hpp
real/include/video/source/RTSP/: rtsp.hpp
real/include/video/source/branches/: archive.hpp  branch.hpp  screenshot.hpp  stream.hpp
real/include/video/source/datalines/: audio.hpp  audioline.hpp  data.hpp  dataline.hpp  video.hpp  videoline.hpp
real/include/video/source/src/: pipebranch.cpp  pipetree.cpp  rtsp.cpp  source.cpp
real/include/video/source/src/branches/: archive.cpp  branch.cpp  screenshot.cpp  stream.cpp
real/include/video/source/src/datalines/: audio.cpp  audioline.cpp  data.cpp  dataline.cpp  video.cpp  videoline.cpp
real/include/video/videoserver/: videoserver.cpp  videoserver.hpp
real/include/videoserver/: videoserver.cpp  videoserver.hpp
